# talkpipe

./: .bandit  .dockerignore  .gitignore  .gitlab-ci.yml  .safety-project.ini  AGENTS.md  CHANGELOG.md  CLAUDE.md  COPYRIGHT  Dockerfile  METADATA_DESIGN_ALTERNATIVES.md  METADATA_STREAM_DESIGN.md  README.md  pyproject.toml  pytest.ini  setup.py  stories.json  test-workflow.yml
.claude/commands/: check_examples.md  review_documentation.md
.cursor/skills/changelog-update/: SKILL.md
.cursor/skills/doc-example-formatting/: SKILL.md
.cursor/skills/run-documentation-examples/: SKILL.md
.cursor/skills/test-driven-development/: SKILL.md
.cursor/skills/update-entry-points/: SKILL.md
.github/: CICD.md  SECURITY.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: release-checklist.md
.github/prompts/: add-segment.prompt.md  changelog.prompt.md  doc-examples.prompt.md  tdd.prompt.md  update-entry-points.prompt.md
.github/workflows/: ci-cd.yml
.gitlab/: README.md
base-image/: Dockerfile
docs/: .gitignore  README.md  TalkPipe.xcf  make_structure_diagram.sh  quickstart.md  structure.tex  talkpipe_architecture.tex
docs/api-reference/: README.md  chatterlang-script.md  chatterlang-server.md  chatterlang-workbench.md  jsonreceiver.md  lazy-loading.md  talkpipe-plugin-manager.md  talkpipe-ref.md
docs/architecture/: README.md  chatterlang.md  configuration.md  documentation-formatting.md  extending-talkpipe.md  metadata-stream.md  pipe-api.md  protocol.md  streaming.md  tool.md
docs/contributing/: developer-handbook.md
docs/examples/: .gitignore
docs/examples/Tutorial_1-Document_Indexing/: Step_1_CreateSyntheticData.sh  Step_2_IndexStories.sh  Step_3_SearchStories.sh
docs/examples/Tutorial_2-Search_by_Example_and_RAG/: README.md  Step_1_CreateVectorDatabase.sh  Step_2_SearchByExample.sh  Step_3_SpecializedRag.sh  step_3_extras.py
docs/examples/Tutorial_3_Report_Writing/: Step_1_ExecutiveSummaryGeneration.sh  Step_2_DetailedAnalysisReportGeneration.sh  Step_3_MultiFormatReportGeneration.sh
docs/guides/: README.md  container-images.md  creating-endpoints.md  local-embeddings.md  makevectordatabase-and-serverag.md  model-and-source-configuration.md  model2vec-embeddings.md
docs/tutorials/: README.md
docs/tutorials/Tutorial_1-Document_Indexing/: README.md  Step_1_CreateSyntheticData.bat  Step_1_CreateSyntheticData.script  Step_1_CreateSyntheticData.sh  Step_2_IndexStories.bat  Step_2_IndexStories.script  Step_2_IndexStories.sh  Step_3_SearchStories.bat  Step_3_SearchStories.script  Step_3_SearchStories.sh  stories.json
docs/tutorials/Tutorial_2-Search_by_Example_and_RAG/: README.md  Step_1_CreateVectorDatabase.bat  Step_1_CreateVectorDatabase.script  Step_1_CreateVectorDatabase.sh  Step_2_SearchByExample.bat  Step_2_SearchByExample.script  Step_2_SearchByExample.sh  Step_3_SpecializedRag.bat  Step_3_SpecializedRag.script  Step_3_SpecializedRag.sh
docs/tutorials/Tutorial_3_Report_Writing/: README.md  Step_1_ExecutiveSummaryGeneration.bat  Step_1_ExecutiveSummaryGeneration.script  Step_1_ExecutiveSummaryGeneration.sh  Step_2_DetailedAnalysisReportGeneration.bat  Step_2_DetailedAnalysisReportGeneration.script  Step_2_DetailedAnalysisReportGeneration.sh  Step_3_MultiFormatReportGeneration.bat  Step_3_MultiFormatReportGeneration.script  Step_3_MultiFormatReportGeneration.sh  file_structure.md  multi_format_ui.yml  step3_extras.py  step_1_extras.py  step_2_extras.py  step_3_extras.py
examples/: README.md
examples/Tutorial_1-Document_Indexing/: Step_2_IndexStories.sh  Step_3_SearchStories.sh  stories.json
examples/Tutorial_2-Search_by_Example_and_RAG/: Step_1_CreateVectorDatabase.sh  Step_2_SearchByExample.sh  Step_3_SpecializedRag.sh  story_search_ui.yaml
examples/Tutorial_3_Report_Writing/: README.md  report_topic_ui.yaml  step1.sh  step2.sh  step3.sh  step3_extras.py  step_2_extras.py
examples/document_indexing/: .gitignore  README.md  Step_1_CreateSyntheticData.sh  story_search_ui.yaml
frontend/: README.md  build.mjs  package-lock.json  package.json
frontend/src/: cm.js
my_kb/docs.lance/_transactions/: 0-986ca23a-130f-4420-992d-108650325e6d.txn
scripts/: extract_and_run_examples.py  extract_documentation_examples.py
src/talkpipe/: __init__.py
src/talkpipe/app/: apiendpoint.py  chatcli.py  chatterlang_generate_entry_points.py  chatterlang_reference_browser.py  chatterlang_reference_generator.py  chatterlang_script.py  chatterlang_serve.py  chatterlang_server.py  chatterlang_workbench.py  doc_examples.py  makevectordatabase.py  precache_embeddings.py  precache_model2vec.py  runscript.py  scriptendpoint.py  serverag.py  talkpipe_plugin_manager.py  unit_documentation_analyzer.py
src/talkpipe/chatterlang/: __init__.py  compiler.py  parsers.py  registry.py
src/talkpipe/data/: email.py  extraction.py  html.py  image.py  mongo.py  rss.py
src/talkpipe/jupyter/: basic.py  examples.py  interactive.py
src/talkpipe/llm/: __init__.py  chat.py  config.py  content.py  embedding.py  embedding_adapters.py  embedding_adapters_local.py  embedding_adapters_model2vec.py  embedding_adapters_openai.py  embedding_errors.py  local_embeddings.py  mcp_tool.py  model2vec_embeddings.py  multimodal.py  prompt_adapter_base.py  prompt_adapter_memory.py  prompt_adapters.py  prompt_adapters_anthropic.py  prompt_adapters_eliza.py  prompt_adapters_ollama.py  prompt_adapters_openai.py  vision.py
src/talkpipe/operations/: __init__.py  filtering.py  matrices.py  signatures.py  thread_ops.py  transforms.py
src/talkpipe/pipe/: __init__.py  basic.py  core.py  fork.py  io.py  math.py  metadata.py
src/talkpipe/pipelines/: basic_rag.py  dataembedders.py  vector_databases.py
src/talkpipe/search/: abstract.py  fulltext.py  lancedb.py  simplevectordb.py  whoosh.py
src/talkpipe/util/: collections.py  config.py  constants.py  data_manipulation.py  doc_extraction.py  iterators.py  os.py  (+1 more)
tests/: conftest.py  prompt_adapter_contract_suite.py  test_doc_examples.py  test_security_vulnerabilities.py  testutils.py
tests/talkpipe/: test_documentation_examples.py
(+119 files in other folders)
