[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "talkpipe"
authors = [
    {name = "Travis Bauer", email = "tlbauer@sandia.gov"},
]
maintainers = [
    {name = "Travis Bauer", email = "tlbauer@sandia.gov"}
]
description = "Python internal and external DSL for writing generative AI analytics"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["ai"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    'prompt_toolkit',
    'parsy',
    'pydantic',
    'requests',
    'numpy',
    'numba==0.62.1',
    'python-docx',
    'pandas',
    'feedparser',
    'readability-lxml',
    'lxml',
    'lxml_html_clean',
    'fastapi[standard]',
    'ipywidgets',
    'pymongo',
    'umap-learn',
    'scikit-learn',
    'uvicorn',
    'whoosh',
    'lancedb',
    'deprecated',
    'pyyaml'
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    'pytest',
    'pytest-mock',
    'pytest-cov',
    'mongomock'
]
ollama = [
    'ollama'
]
openai = [
    'openai'
]
anthropic = [
    'anthropic'
]
all = [
    'talkpipe[openai,ollama,anthropic]'
]

[project.scripts]
chatterlang_workbench = "talkpipe.app.chatterlang_workbench:main"
chatterlang_script = "talkpipe.app.chatterlang_script:main"
chatterlang_reference_generator = "talkpipe.app.chatterlang_reference_generator:go"
chatterlang_serve = "talkpipe.app.chatterlang_serve:go"
chatterlang_reference_browser = "talkpipe.app.chatterlang_reference_browser:main"
talkpipe_plugins = "talkpipe.app.talkpipe_plugin_manager:main"

[tool.setuptools.packages.find]
where = ["src"]

# Add package data to include .ico files
[tool.setuptools.package-data]
"*" = ["*.ico"]
"talkpipe.app.static" = ["*.html", "*.txt"]

[tool.setuptools_scm]
#use defaults

[project.urls]
Homepage = "https://github.com/sandialabs/talkpipe"
