[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "talkpipe"
authors = [
    {name = "Travis Bauer", email = "tlbauer@sandia.gov"},
]
maintainers = [
    {name = "Travis Bauer", email = "tlbauer@sandia.gov"}
]
description = "Python internal and external DSL for writing generative AI analytics"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["ai"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    'prompt_toolkit',
    'parsy',
    'pydantic',
    'requests',
    'numpy',
    'python-docx',
    'pandas',
    'feedparser',
    'readability-lxml',
    'lxml',
    'lxml_html_clean',
    'fastapi[standard]',
    'ipywidgets',
    'pymongo',
    'scikit-learn',
    'uvicorn',
    'whoosh',
    'lancedb',
    'deprecated',
    'pyyaml',

    # Security override: starlette is a transitive dependency, pinned here
    # to fix CVE-2025-62727 (DoS vulnerability). Remove once parent 
    # dependency (e.g., FastAPI) requires starlette>=0.49.1
    "starlette>=0.49.1"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    'pytest',
    'pytest-mock',
    'pytest-cov',
    'mongomock'
]
ollama = [
    'ollama'
]
openai = [
    'openai'
]
anthropic = [
    'anthropic'
]
all = [
    'talkpipe[openai,ollama,anthropic]'
]

[project.scripts]
chatterlang_workbench = "talkpipe.app.chatterlang_workbench:main"
chatterlang_script = "talkpipe.app.chatterlang_script:main"
chatterlang_reference_generator = "talkpipe.app.chatterlang_reference_generator:go"
chatterlang_serve = "talkpipe.app.chatterlang_serve:go"
chatterlang_reference_browser = "talkpipe.app.chatterlang_reference_browser:main"
chatterlang_generate_entry_points = "talkpipe.app.chatterlang_generate_entry_points:main"
talkpipe_plugins = "talkpipe.app.talkpipe_plugin_manager:main"

[tool.setuptools.packages.find]
where = ["src"]

# Add package data to include .ico files
[tool.setuptools.package-data]
"*" = ["*.ico"]
"talkpipe.app.static" = ["*.html", "*.txt"]

[tool.setuptools_scm]
#use defaults

[project.urls]
Homepage = "https://github.com/sandialabs/talkpipe"

[project.entry-points."talkpipe.sources"]
chatterlangServer = "talkpipe.talkpipe.app.chatterlang_serve:ChatterlangServerSegment"
echo = "talkpipe.talkpipe.pipe.io:echo"
exec = "talkpipe.talkpipe.pipe.basic:exec"
prompt = "talkpipe.talkpipe.pipe.io:Prompt"
randomInts = "talkpipe.talkpipe.pipe.math:randomInts"
range = "talkpipe.talkpipe.pipe.math:arange"
readEmail = "talkpipe.talkpipe.data.email:readEmail"
rss = "talkpipe.talkpipe.data.rss:rss_source"

[project.entry-points."talkpipe.segments"]
accum = "talkpipe.talkpipe.chatterlang.compiler:Accum"
addToLancDB = "talkpipe.talkpipe.search.lancedb:add_to_lancedb"
addToLanceDB = "talkpipe.talkpipe.search.lancedb:add_to_lancedb"
cast = "talkpipe.talkpipe.pipe.basic:Cast"
concat = "talkpipe.talkpipe.pipe.basic:concat"
configureLogger = "talkpipe.talkpipe.pipe.basic:ConfigureLogger"
constructRagPrompt = "talkpipe.talkpipe.pipelines.basic_rag:ConstructRAGPrompt"
copy = "talkpipe.talkpipe.pipe.basic:copy_segment"
deepCopy = "talkpipe.talkpipe.pipe.basic:deep_copy_segment"
describe = "talkpipe.talkpipe.pipe.basic:DescribeData"
distinctBloomFilter = "talkpipe.talkpipe.operations.filtering:distinctBloomFilter"
downloadURL = "talkpipe.talkpipe.data.html:downloadURLSegment"
dumpsJsonl = "talkpipe.talkpipe.pipe.io:dumpsJsonl"
eq = "talkpipe.talkpipe.pipe.math:eq"
everyN = "talkpipe.talkpipe.pipe.basic:everyN"
extractProperty = "talkpipe.talkpipe.pipe.basic:extractProperty"
fillNull = "talkpipe.talkpipe.operations.transforms:fill_null"
fillTemplate = "talkpipe.talkpipe.pipe.basic:fillTemplate"
firstN = "talkpipe.talkpipe.pipe.basic:firstN"
flatten = "talkpipe.talkpipe.pipe.basic:flatten"
formatItem = "talkpipe.talkpipe.pipe.basic:FormattedItem"
gt = "talkpipe.talkpipe.pipe.math:gt"
gte = "talkpipe.talkpipe.pipe.math:gte"
hash = "talkpipe.talkpipe.pipe.basic:Hash"
htmlToText = "talkpipe.talkpipe.data.html:htmlToTextSegment"
indexWhoosh = "talkpipe.talkpipe.search.whoosh:indexWhoosh"
isFalse = "talkpipe.talkpipe.pipe.basic:isFalse"
isIn = "talkpipe.talkpipe.pipe.basic:isIn"
isNotIn = "talkpipe.talkpipe.pipe.basic:isNotIn"
isTrue = "talkpipe.talkpipe.pipe.basic:isTrue"
lambda = "talkpipe.talkpipe.pipe.basic:EvalExpression"
lambdaFilter = "talkpipe.talkpipe.pipe.basic:FilterExpression"
listFiles = "talkpipe.talkpipe.data.extraction:listFiles"
llmBinaryAnswer = "talkpipe.talkpipe.llm.chat:LlmBinaryAnswer"
llmEmbed = "talkpipe.talkpipe.llm.embedding:LLMEmbed"
llmExtractTerms = "talkpipe.talkpipe.llm.chat:LlmExtractTerms"
llmPrompt = "talkpipe.talkpipe.llm.chat:LLMPrompt"
llmScore = "talkpipe.talkpipe.llm.chat:LlmScore"
loadsJsonl = "talkpipe.talkpipe.pipe.io:loadsJsonl"
log = "talkpipe.talkpipe.pipe.io:Log"
longestStr = "talkpipe.talkpipe.pipe.basic:longestStr"
lt = "talkpipe.talkpipe.pipe.math:lt"
lte = "talkpipe.talkpipe.pipe.math:lte"
makeLists = "talkpipe.talkpipe.operations.transforms:MakeLists"
makeVectorDatabase = "talkpipe.talkpipe.pipelines.vector_databases:MakeVectorDatabaseSegment"
mongoInsert = "talkpipe.talkpipe.data.mongo:MongoInsert"
mongoSearch = "talkpipe.talkpipe.data.mongo:MongoSearch"
neq = "talkpipe.talkpipe.pipe.math:neq"
print = "talkpipe.talkpipe.pipe.io:Print"
progressTicks = "talkpipe.talkpipe.pipe.basic:progressTicks"
ragToBinaryAnswer = "talkpipe.talkpipe.pipelines.basic_rag:RAGToBinaryAnswer"
ragToScore = "talkpipe.talkpipe.pipelines.basic_rag:RAGToScore"
ragToText = "talkpipe.talkpipe.pipelines.basic_rag:RAGToText"
readFile = "talkpipe.talkpipe.data.extraction:ReadFile"
readJsonl = "talkpipe.talkpipe.pipe.io:readJsonl"
readdocx = "talkpipe.talkpipe.data.extraction:readdocx"
readtxt = "talkpipe.talkpipe.data.extraction:readtxt"
reduceTSNE = "talkpipe.talkpipe.operations.matrices:ReduceTSNE"
regexReplace = "talkpipe.talkpipe.operations.transforms:regex_replace"
scale = "talkpipe.talkpipe.pipe.math:scale"
searchLancDB = "talkpipe.talkpipe.search.lancedb:search_lancedb"
searchLanceDB = "talkpipe.talkpipe.search.lancedb:search_lancedb"
searchVectorDatabase = "talkpipe.talkpipe.pipelines.vector_databases:SearchVectorDatabaseSegment"
searchWhoosh = "talkpipe.talkpipe.search.whoosh:searchWhoosh"
sendEmail = "talkpipe.talkpipe.data.email:sendEmail"
set = "talkpipe.talkpipe.pipe.basic:assign"
setAs = "talkpipe.talkpipe.pipe.basic:setAs"
shingleText = "talkpipe.talkpipe.data.text.chunking_units:ShingleText"
sleep = "talkpipe.talkpipe.pipe.basic:sleep"
slice = "talkpipe.talkpipe.pipe.basic:slice"
snippet = "talkpipe.talkpipe.chatterlang.compiler:Snippet"
splitText = "talkpipe.talkpipe.data.text.chunking_units:splitText"
threaded = "talkpipe.talkpipe.operations.thread_ops:threadedSegment"
toDataFrame = "talkpipe.talkpipe.pipe.basic:ToDataFrame"
toDict = "talkpipe.talkpipe.pipe.basic:ToDict"
toList = "talkpipe.talkpipe.pipe.basic:ToList"
writePickle = "talkpipe.talkpipe.pipe.io:writePickle"
writeString = "talkpipe.talkpipe.pipe.io:writeString"