[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "talkpipe"
authors = [
    {name = "Travis Bauer", email = "tlbauer@sandia.gov"},
]
maintainers = [
    {name = "Travis Bauer", email = "tlbauer@sandia.gov"}
]
description = "Python internal and external DSL for writing generative AI analytics"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["ai"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    'prompt_toolkit',
    'parsy',
    'pydantic',
    'requests',
    'numpy',
    'python-docx',
    'pandas',
    'feedparser',
    'readability-lxml',
    'lxml',
    'lxml_html_clean',
    'fastapi[standard]',
    'ipywidgets',
    'pymongo',
    'scikit-learn',
    'uvicorn',
    'whoosh',
    'lancedb',
    'deprecated',
    'pyyaml',
    'greenlet',
    'networkx',

    # Security override: starlette is a transitive dependency, pinned here
    # to fix CVE-2025-62727 (DoS vulnerability). Remove once parent 
    # dependency (e.g., FastAPI) requires starlette>=0.49.1
    "starlette>=0.49.1"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    'pytest',
    'pytest-mock',
    'pytest-cov',
    'mongomock'
]
ollama = [
    'ollama'
]
openai = [
    'openai'
]
anthropic = [
    'anthropic'
]
all = [
    'talkpipe[openai,ollama,anthropic]'
]

[project.scripts]
chatterlang_workbench = "talkpipe.app.chatterlang_workbench:main"
chatterlang_script = "talkpipe.app.chatterlang_script:main"
chatterlang_reference_generator = "talkpipe.app.chatterlang_reference_generator:go"
chatterlang_serve = "talkpipe.app.chatterlang_serve:go"
chatterlang_reference_browser = "talkpipe.app.chatterlang_reference_browser:main"
chatterlang_generate_entry_points = "talkpipe.app.chatterlang_generate_entry_points:main"
talkpipe_plugins = "talkpipe.app.talkpipe_plugin_manager:main"

[tool.setuptools.packages.find]
where = ["src"]

# Add package data to include .ico files
[tool.setuptools.package-data]
"*" = ["*.ico"]
"talkpipe.app.static" = ["*.html", "*.txt"]

[tool.setuptools_scm]
#use defaults

[project.urls]
Homepage = "https://github.com/sandialabs/talkpipe"

[project.entry-points."talkpipe.sources"]
chatterlangServer = "talkpipe.app.chatterlang_serve:ChatterlangServerSegment"
echo = "talkpipe.pipe.io:echo"
exec = "talkpipe.pipe.basic:exec"
flushT = "talkpipe.pipe.metadata:FlushTSource"
prompt = "talkpipe.pipe.io:Prompt"
randomInts = "talkpipe.pipe.math:randomInts"
range = "talkpipe.pipe.math:arange"
readEmail = "talkpipe.data.email:readEmail"
rss = "talkpipe.data.rss:rss_source"

[project.entry-points."talkpipe.segments"]
accum = "talkpipe.chatterlang.compiler:Accum"
addToLancDB = "talkpipe.search.lancedb:add_to_lancedb"
addToLanceDB = "talkpipe.search.lancedb:add_to_lancedb"
cast = "talkpipe.pipe.basic:Cast"
concat = "talkpipe.pipe.basic:concat"
configureLogger = "talkpipe.pipe.basic:ConfigureLogger"
constructRagPrompt = "talkpipe.pipelines.basic_rag:ConstructRAGPrompt"
copy = "talkpipe.pipe.basic:copy_segment"
debounce = "talkpipe.pipe.basic:Debounce"
deepCopy = "talkpipe.pipe.basic:deep_copy_segment"
deleteFile = "talkpipe.pipe.io:DeleteFile"
describe = "talkpipe.pipe.basic:DescribeData"
diagPrint = "talkpipe.pipe.basic:DiagPrint"
distinctBloomFilter = "talkpipe.operations.filtering:distinctBloomFilter"
downloadURL = "talkpipe.data.html:downloadURLSegment"
dumpsJsonl = "talkpipe.pipe.io:dumpsJsonl"
eq = "talkpipe.pipe.math:eq"
everyN = "talkpipe.pipe.basic:everyN"
extractProperty = "talkpipe.pipe.basic:extractProperty"
fileExistsFilter = "talkpipe.pipe.io:FileExistsFilter"
fillNull = "talkpipe.operations.transforms:fill_null"
fillTemplate = "talkpipe.pipe.basic:fillTemplate"
firstN = "talkpipe.pipe.basic:firstN"
flatten = "talkpipe.pipe.basic:flatten"
flushN = "talkpipe.pipe.metadata:flushN"
flushT = "talkpipe.pipe.metadata:flushT"
formatItem = "talkpipe.pipe.basic:FormattedItem"
gt = "talkpipe.pipe.math:gt"
gte = "talkpipe.pipe.math:gte"
hash = "talkpipe.pipe.basic:Hash"
htmlToText = "talkpipe.data.html:htmlToTextSegment"
indexWhoosh = "talkpipe.search.whoosh:indexWhoosh"
isFalse = "talkpipe.pipe.basic:isFalse"
isIn = "talkpipe.pipe.basic:isIn"
isNotIn = "talkpipe.pipe.basic:isNotIn"
isTrue = "talkpipe.pipe.basic:isTrue"
lambda = "talkpipe.pipe.basic:EvalExpression"
lambdaFilter = "talkpipe.pipe.basic:FilterExpression"
listFiles = "talkpipe.data.extraction:listFiles"
llmBinaryAnswer = "talkpipe.llm.chat:LlmBinaryAnswer"
llmEmbed = "talkpipe.llm.embedding:LLMEmbed"
llmExtractTerms = "talkpipe.llm.chat:LlmExtractTerms"
llmPrompt = "talkpipe.llm.chat:LLMPrompt"
llmScore = "talkpipe.llm.chat:LlmScore"
loadsJsonl = "talkpipe.pipe.io:loadsJsonl"
log = "talkpipe.pipe.io:Log"
longestStr = "talkpipe.pipe.basic:longestStr"
lt = "talkpipe.pipe.math:lt"
lte = "talkpipe.pipe.math:lte"
makeLists = "talkpipe.operations.transforms:MakeLists"
makeVectorDatabase = "talkpipe.pipelines.vector_databases:MakeVectorDatabaseSegment"
mongoInsert = "talkpipe.data.mongo:MongoInsert"
mongoSearch = "talkpipe.data.mongo:MongoSearch"
neq = "talkpipe.pipe.math:neq"
print = "talkpipe.pipe.io:Print"
progressTicks = "talkpipe.pipe.basic:progressTicks"
ragToBinaryAnswer = "talkpipe.pipelines.basic_rag:RAGToBinaryAnswer"
ragToScore = "talkpipe.pipelines.basic_rag:RAGToScore"
ragToText = "talkpipe.pipelines.basic_rag:RAGToText"
readFile = "talkpipe.data.extraction:ReadFile"
readJsonl = "talkpipe.pipe.io:readJsonl"
readdocx = "talkpipe.data.extraction:readdocx"
readtxt = "talkpipe.data.extraction:readtxt"
reduceTSNE = "talkpipe.operations.matrices:ReduceTSNE"
regexReplace = "talkpipe.operations.transforms:regex_replace"
scale = "talkpipe.pipe.math:scale"
searchLancDB = "talkpipe.search.lancedb:search_lancedb"
searchLanceDB = "talkpipe.search.lancedb:search_lancedb"
searchVectorDatabase = "talkpipe.pipelines.vector_databases:SearchVectorDatabaseSegment"
searchWhoosh = "talkpipe.search.whoosh:searchWhoosh"
sendEmail = "talkpipe.data.email:sendEmail"
set = "talkpipe.pipe.basic:assign"
setAs = "talkpipe.pipe.basic:setAs"
shingleText = "talkpipe.data.text.chunking_units:ShingleText"
sleep = "talkpipe.pipe.basic:sleep"
slice = "talkpipe.pipe.basic:slice"
snippet = "talkpipe.chatterlang.compiler:Snippet"
splitText = "talkpipe.data.text.chunking_units:splitText"
threaded = "talkpipe.operations.thread_ops:threadedSegment"
toDataFrame = "talkpipe.pipe.basic:ToDataFrame"
toDict = "talkpipe.pipe.basic:ToDict"
toList = "talkpipe.pipe.basic:ToList"
writePickle = "talkpipe.pipe.io:writePickle"
writeString = "talkpipe.pipe.io:writeString"
collectMetadata = "talkpipe.pipe.metadata:collectMetadata"